# glfw-meson

./: meson.build  meson_options.txt
include/: meson.build
src/: meson.build
tests/: cursor.c  meson.build  msaa.c
